--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,5 +1,5 @@
 <!-- Edit form -->
-<form action="/user/update/<%= user.id %>" method="POST" class="form-horizontal form-user-edit">
+<form action="/user/update/<%= user.id %>" method="POST" class="form-horizontal form-user-edit form-validate">
 	<div class="form-group">
 		<div class="col-md-12">
 			<h2><%= __('Edit profile') %></h2>
@@ -214,7 +214,7 @@
 		<div class="col-md-8"><input <% if(user.matrimonialRegime) { %>value="<%= user.matrimonialRegime %>"<% } else { %>placeholder="<%= __("Matrimonial regime") %>"<% } %> name="matrimonialRegime" type="text" class="form-control"/></div>
 	</div>
 	<div class="form-group">
-		<label for="jobTitle" class="col-md-4 control-label"><%= __('Occupation (latest if retired)') %></label>
+		<label for="occupation" class="col-md-4 control-label"><%= __('Occupation (latest if retired)') %></label>
 		<div class="col-md-8"><input <% if(user.occupation) { %>value="<%= user.occupation %>"<% } else { %>placeholder="<%= __("Occupation") %>"<% } %> name="occupation" type="text" class="form-control"/></div>
 	</div>
 	<div class="form-group">
@@ -410,6 +410,46 @@
 			   	<%= __('above') %> 15M€
 			  </label>
 			</div>
+		</div>
+	</div>
+	<% } %>
+
+	<!-- Bank account card -->
+	<% if (session.editUserSection === 'bankAccount') { %>
+	<div class="form-group">
+		<div class="col-md-12" id="bankAccountInputWrapper">
+			<div class="form-group">
+				<div class="col-md-12">
+					<div class="form-group">
+						<label for="iban" class="col-md-4 control-label"><%= __('IBAN') %></label>
+						<div class="col-md-8"><input <% if(user.iban) { %>value="<%= user.iban %>"<% } else { %>placeholder="<%= __("IBAN") %>"<% } %> name="iban_1" type="text" class="form-control"/></div>
+					</div>
+					<div class="form-group">
+						<label for="bankName" class="col-md-4 control-label"><%= __('Bank name') %></label>
+						<div class="col-md-8"><input <% if(user.bankName) { %>value="<%= user.bankName %>"<% } else { %>placeholder="<%= __("Bank name") %>"<% } %> name="bankName_1" type="text" class="form-control"/></div>
+					</div>
+					<div class="form-group">
+						<label for="branchName" class="col-md-4 control-label"><%= __('Branch name') %></label>
+						<div class="col-md-8"><input <% if(user.branchName) { %>value="<%= user.branchName %>"<% } else { %>placeholder="<%= __("Branch name") %>"<% } %> name="branchName_1" type="text" class="form-control"/></div>
+					</div>
+					<div class="form-group">
+						<label for="bankAddress" class="col-md-4 control-label"><%= __('Bank address') %></label>
+						<div class="col-md-8"><input <% if(user.bankAddress) { %>value="<%= user.bankAddress %>"<% } else { %>placeholder="<%= __("Bank address") %>"<% } %> name="bankAddress_1" type="text" class="form-control"/></div>
+					</div>
+					<input type="hidden" value="1" name="nbOfAccounts">
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Button to add new bank account as per requested by user-->
+	<div class="form-group">
+		<div class="col-md-12 control-label">
+			<%
+				var addBankAccountData = '{ "userId": "' + user.id + '", "label": { "maxReached" : "' + __('Max number of accounts reached') +'" , "account" : "' + __('Account') + '" , "IBAN" : "' + __('IBAN') + '" , "bankName": "' + __('Bank name') + '" , "branchName": "' + __('Branch name') + '" , "bankAddress": "' + __('Bank address') + '" } }';
+			%>
+			<button type="button" class="btn btn-default btn-lg" id="addBankAccountInput" data-subject="<%= addBankAccountData %>">
+				<span class="glyphicon glyphicon-plus"></span> <%= __('Add an account') %>
+			</button>
 		</div>
 	</div>
 	<% } %>
