--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,4 +1,4 @@
-<form action="/user/create" method="POST" class="form-horizontal form-signin">
+<form action="/user/create" method="POST" class="form-horizontal form-signin form-validate">
 	<div class="form-group">
 		<div class="col-md-12">
 			<h2 class="form-signin-heading"><%= __("New account") %></h2>
