--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,6 +47,87 @@
   </head>
 
   <body>
+    <!--
+        Client-side Templates
+        ========================
+
+    		HTML templates are important prerequisites of modern, rich client applications.
+        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
+        that you load these templates client-side.
+
+        By default, your Gruntfile is configured to automatically load and precompile
+        client-side JST templates in your `assets/linker/templates` folder, then
+        include them here automatically.
+        
+        To customize this behavior to fit your needs, just edit your Gruntfile.
+        For example, here are a few things you could do:
+
+            + Import templates from other directories
+            + Use a different template engine (handlebars, jade, dust, etc.)
+            + Internationalize your templates using a server-side stringfile
+              before they're served.
+    -->
+
+    <!--TEMPLATES-->
+    <script type="text/javascript" src="/jst.js"></script>
+    <!--TEMPLATES END-->
+
+
+    <!--
+
+      Client-side Javascript
+      ========================
+
+      You can always bring in JS files manually with `script` tags, or asynchronously
+      on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
+      take advantage of Sails' boilerplate asset management.
+
+      By default, filesin your `assets/linker/js` folder are included here
+      automatically.  Both JavaScript (.js) and CoffeeScript (.coffee) are supported.
+      In production, your scripts will be minified and concatenated into a single file.
+      
+      To customize any part of the built-in behavior, just edit your Gruntfile.
+      For example, here are a few things you could do:
+          
+          + Change the order of your scripts
+          + Import scripts from other directories
+          + Use a different preprocessor, like TypeScript
+
+    -->
+
+    <!--SCRIPTS-->
+    <script src="/linker/js/socket.io.js"></script>
+    <script src="/linker/js/sails.io.js"></script>
+    <script src="/linker/js/jquery.js"></script>
+    <script src="/linker/js/jquery.validate.js"></script>
+    <script src="/linker/js/jquery.validate.datefix.js"></script>
+    <script src="/linker/js/jquery.validate.additional-methods.js"></script>
+    <script src="/linker/js/app.js"></script>
+    <script src="/linker/js/angular.js"></script>
+    <script src="/linker/js/bootstrap.js"></script>
+    <script src="/linker/js/customValidate.js"></script>
+    <script src="/linker/js/customjQueryUI.js"></script>
+    <script src="/linker/js/jquery-ui-1.10.4.custom.js"></script>
+    <script src="/linker/js/underscore.js"></script>
+    <!--SCRIPTS END-->
+
+    <!-- Language selection for jQuery.validate plugin -->
+    <% if(session.lang && session.lang !== 'en'){ %>
+      <script src=<%= "/linker/nolinker/js/jquery.validate.localization/messages_" + session.lang + ".js" %> ></script>
+    <% } %>
+
+    <!-- Edit user bank account function used for views/user/edit.ejs -->
+     <script src="/linker/nolinker/js/user/edit.js"></script>
+
+    <!-- Submit function for the language selector - Using JQUERY so need to be located after JQUERY is loaded -->
+    <script type="text/javascript">
+      $(function () {
+        $("#lang").change(function () {
+          $("#formLang").submit();
+        });
+      });
+    </script>
+
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -139,7 +220,7 @@
       </div>
     </nav>
 
-    <%- body %>
+      <%- body %>
 
     <div class="container">
       <hr>
@@ -149,86 +230,5 @@
         </div>
       </footer>
     </div>
-
-
-    <!--
-        Client-side Templates
-        ========================
-
-    		HTML templates are important prerequisites of modern, rich client applications.
-        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
-        that you load these templates client-side.
-
-        By default, your Gruntfile is configured to automatically load and precompile
-        client-side JST templates in your `assets/linker/templates` folder, then
-        include them here automatically.
-        
-        To customize this behavior to fit your needs, just edit your Gruntfile.
-        For example, here are a few things you could do:
-
-            + Import templates from other directories
-            + Use a different template engine (handlebars, jade, dust, etc.)
-            + Internationalize your templates using a server-side stringfile
-              before they're served.
-    -->
-
-    <!--TEMPLATES-->
-    <script type="text/javascript" src="/jst.js"></script>
-    <!--TEMPLATES END-->
-
-
-    <!--
-
-      Client-side Javascript
-      ========================
-
-      You can always bring in JS files manually with `script` tags, or asynchronously
-      on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
-      take advantage of Sails' boilerplate asset management.
-
-      By default, filesin your `assets/linker/js` folder are included here
-      automatically.  Both JavaScript (.js) and CoffeeScript (.coffee) are supported.
-      In production, your scripts will be minified and concatenated into a single file.
-      
-      To customize any part of the built-in behavior, just edit your Gruntfile.
-      For example, here are a few things you could do:
-          
-          + Change the order of your scripts
-          + Import scripts from other directories
-          + Use a different preprocessor, like TypeScript
-
-    -->
-
-    <!--SCRIPTS-->
-    <script src="/linker/js/socket.io.js"></script>
-    <script src="/linker/js/sails.io.js"></script>
-    <script src="/linker/js/jquery.js"></script>
-    <script src="/linker/js/jquery.validate.js"></script>
-    <script src="/linker/js/jquery.validate.datefix.js"></script>
-    <script src="/linker/js/jquery.validate.additional-methods.js"></script>
-    <script src="/linker/js/app.js"></script>
-    <script src="/linker/js/bootstrap.js"></script>
-    <script src="/linker/js/customValidate.js"></script>
-    <script src="/linker/js/customjQueryUI.js"></script>
-    <script src="/linker/js/jquery-ui-1.10.4.custom.js"></script>
-    <script src="/linker/js/underscore.js"></script>
-    <!--SCRIPTS END-->
-
-    <!-- Language selection for jQuery.validate plugin -->
-    <% if(session.lang && session.lang !== 'en'){ %>
-      <script src=<%= "/linker/nolinker/js/jquery.validate.localization/messages_" + session.lang + ".js" %> ></script>
-    <% } %>
-
-    <!-- Edit user bank account function used for views/user/edit.ejs -->
-     <script src="/linker/nolinker/js/user/edit.js"></script>
-
-    <!-- Submit function for the language selector - Using JQUERY so need to be located after JQUERY is loaded -->
-    <script type="text/javascript">
-      $(function () {
-        $("#lang").change(function () {
-          $("#formLang").submit();
-        });
-      });
-    </script>
   </body>
 </html>
