--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -22,13 +22,6 @@
 		</div>
 	</div>
 
-	<!-- Show validation errors if any -->
-	 <div class="form-group error">
-		<div class="col-md-12 text-center">
-	  		<h5><span class="text-danger"></span></h5>
-		</div>
-	</div>	
-
 	<% if(flash && flash.err) { %>
 		<ul class="alert alert-success">
 			<% Object.keys(flash.err ).forEach(function(error) { %>
@@ -414,44 +407,73 @@
 	</div>
 	<% } %>
 
-	<!-- Bank account card -->
-	<% if (session.editUserSection === 'bankAccount') { %>
+	<!-- Bank account -->
+	<% if (session.editUserSection === 'bankAccount') {
+		var indexOfAccounts = new Array();
+	%>
 	<div class="form-group">
 		<div class="col-md-12" id="bankAccountInputWrapper">
-			<div class="form-group">
-				<div class="col-md-12">
-					<div class="form-group">
-						<label for="iban" class="col-md-4 control-label"><%= __('IBAN') %></label>
-						<div class="col-md-8"><input <% if(user.iban) { %>value="<%= user.iban %>"<% } else { %>placeholder="<%= __("IBAN") %>"<% } %> name="iban_1" type="text" class="form-control"/></div>
+		<!-- Accounts edit form -->
+	<%	
+		var initialNbOfAccounts = user.bankAccount.nbOfAccounts;
+		for (var count=1; count <= initialNbOfAccounts; count++) { 
+			var account = eval("user.bankAccount.account_" + count);
+	%>
+			<!-- Check if account exists, if not shift to the next account -->
+	<%		if (!account) {
+				initialNbOfAccounts++;
+			}
+			else {
+				indexOfAccounts.push("account_" + count);
+	%>
+				<div class="form-group bg-info custom-round-border">
+					<div class="col-md-12">
+						<div class="form-group">
+							<div class="col-md-12 control-label">
+									<button type="button" class="btn btn-danger btn-xs removeBankAccountclass" id="account_<%= count %>">
+										<span class="glyphicon glyphicon-minus"></span>
+									</button>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="label_<%= count %>" class="col-md-4 control-label"><%= __('Label') %></label>
+							<div class="col-md-8"><input <% if(account.label) { %>value="<%= account.label %>"<% } else { %>placeholder="<%= __('Label') %>"<% } %> name="label_<%= count %>" type="text" class="form-control"/></div>
+						</div>
+						<div class="form-group">
+							<label for="iban_<%= count %>" class="col-md-4 control-label"><%= __('IBAN') %></label>
+							<div class="col-md-8"><input <% if(account.iban) { %>value="<%= account.iban %>"<% } else { %>placeholder="<%= __('IBAN') %>"<% } %> name="iban_<%= count %>" type="text" class="form-control"/></div>
+						</div>
+						<div class="form-group">
+							<label for="bankName_<%= count %>" class="col-md-4 control-label"><%= __('Bank name') %></label>
+							<div class="col-md-8"><input <% if(account.bankName) { %>value="<%= account.bankName %>"<% } else { %>placeholder="<%= __('Bank name') %>"<% } %> name="bankName_<%= count %>" type="text" class="form-control"/></div>
+						</div>
+						<div class="form-group">
+							<label for="branchName_<%= count %>" class="col-md-4 control-label"><%= __('Branch name') %></label>
+							<div class="col-md-8"><input <% if(account.branchName) { %>value="<%= account.branchName %>"<% } else { %>placeholder="<%= __('Branch name') %>"<% } %> name="branchName_<%= count %>" type="text" class="form-control"/></div>
+						</div>
+						<div class="form-group">
+							<label for="bankAddress_<%= count %>" class="col-md-4 control-label"><%= __('Bank address') %></label>
+							<div class="col-md-8"><input <% if(account.bankAddress) { %>value="<%= account.bankAddress %>"<% } else { %>placeholder="<%= __('Bank address') %>"<% } %> name="bankAddress_<%= count %>" type="text" class="form-control"/></div>
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="bankName" class="col-md-4 control-label"><%= __('Bank name') %></label>
-						<div class="col-md-8"><input <% if(user.bankName) { %>value="<%= user.bankName %>"<% } else { %>placeholder="<%= __("Bank name") %>"<% } %> name="bankName_1" type="text" class="form-control"/></div>
-					</div>
-					<div class="form-group">
-						<label for="branchName" class="col-md-4 control-label"><%= __('Branch name') %></label>
-						<div class="col-md-8"><input <% if(user.branchName) { %>value="<%= user.branchName %>"<% } else { %>placeholder="<%= __("Branch name") %>"<% } %> name="branchName_1" type="text" class="form-control"/></div>
-					</div>
-					<div class="form-group">
-						<label for="bankAddress" class="col-md-4 control-label"><%= __('Bank address') %></label>
-						<div class="col-md-8"><input <% if(user.bankAddress) { %>value="<%= user.bankAddress %>"<% } else { %>placeholder="<%= __("Bank address") %>"<% } %> name="bankAddress_1" type="text" class="form-control"/></div>
-					</div>
-					<input type="hidden" value="1" name="nbOfAccounts">
 				</div>
+		<%	}
+		} %>
 			</div>
 		</div>
-	</div>
-	<!-- Button to add new bank account as per requested by user-->
-	<div class="form-group">
-		<div class="col-md-12 control-label">
-			<%
-				var addBankAccountData = '{ "userId": "' + user.id + '", "label": { "maxReached" : "' + __('Max number of accounts reached') +'" , "account" : "' + __('Account') + '" , "IBAN" : "' + __('IBAN') + '" , "bankName": "' + __('Bank name') + '" , "branchName": "' + __('Branch name') + '" , "bankAddress": "' + __('Bank address') + '" } }';
-			%>
-			<button type="button" class="btn btn-default btn-lg" id="addBankAccountInput" data-subject="<%= addBankAccountData %>">
-				<span class="glyphicon glyphicon-plus"></span> <%= __('Add an account') %>
-			</button>
+		<!-- Button to add new bank account as per requested by user-->
+		<div class="form-group">
+			<div class="col-md-12 control-label">
+				<input type="hidden" value="<%= user.bankAccount.nbOfAccounts %>" name="nbOfAccounts">
+				<input type="hidden" name="indexOfAccounts" data-accounts-index="<%= indexOfAccounts %>">
+				<%
+					var addBankAccountData = '{ "userId": "' + user.id + '", "label": { "maxReached" : "' + __('Max number of accounts reached') + '" , "label" : "' + __('Label') + '" , "account" : "' + __('Account') + '" , "IBAN" : "' + __('IBAN') + '" , "bankName": "' + __('Bank name') + '" , "branchName": "' + __('Branch name') + '" , "bankAddress": "' + __('Bank address') + '" } }';
+				%>
+				<button type="button" class="btn btn-success" id="addBankAccountInput" data-subject="<%= addBankAccountData %>">
+					<span class="glyphicon glyphicon-plus"></span> <%= __('Add an account') %>
+				</button>
+			</div>
 		</div>
-	</div>
 	<% } %>
 
 	<!-- Submit -->
