--- a/assets/templates/user/show_addUser.ejs
+++ b/assets/templates/user/show_addUser.ejs
@@ -13,8 +13,8 @@
 	<% } else { %>
 		<td><img src="/images/pawn.png"></td>
 	<% } %>
-	<td><a href="/user/show/<%- user.id %>" class="btn btn-small btn-primary">Show</a></td>
-	<td><a href="/user/edit/<%- user.id %>" class="btn btn-small btn-warning">Warning</a></td>
+	<td><a href="/user/show/<%- user.id %>" class="btn btn-sm btn-primary">Show</a></td>
+	<td><a href="/user/edit/<%- user.id %>" class="btn btn-sm btn-warning">Edit</a></td>
 	<td>
 		<form action="/user/destroy/<%- user.id %>" method="POST">
 			<input type="hidden" name="_method" value="delete"/>
