--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -11,14 +11,29 @@
 @darkBlue: #106E8D;
 @darkGray: #4A4A4A; // paragraphs
 @red: #D16565; // error
+@lightpurple: #827cac;
+@mediumpurple: #5d5586;
+@darkpurple: #341040;
 
 body {
 	padding-top: 60px;
 	padding-bottom: 40px;
 }
 
+.custom-navbar-logo
+{
+  height: 20px;
+  width: auto;
+}
+
+.navbar {
+	background-color: @darkpurple;
+	/* height: 60px; */
+}
+
 .jumbotron {
 	text-align: center;
+	background-color: @lightGray;
 }
 
 .jumbotron h2 {
@@ -53,6 +68,58 @@ body {
 	border-radius: 15px;
 	padding: 10px 40px 10px;
 }
+
+/* Carousel
+-------------------------------------------------- */
+
+.carousel-caption {
+  background-color: transparent;
+  text-align:center;
+  /* margin-bottom: 120px; */
+  margin: 0 auto; 
+  height: 380px;
+} 
+
+.carousel-caption .btn {
+  margin-top: 10px;
+}
+
+.carousel-caption h1 {
+  font-size: 250%;
+}
+
+.carousel-caption p {
+  font-size: 140%;
+}
+
+/* Responsive UI */
+
+@media (min-width: 980px) {
+    #carousel-homepage.carousel img {
+    	width: 100%;
+    	height: 550px;
+	}
+}
+
+@media (max-width: 979px) {
+    #carousel-homepage.carousel img {
+    	width: 100%;
+    	height: 550px;
+	}
+}
+
+@media (max-width: 470px) {
+	#carousel-homepage.carousel img {
+		max-width:300%;
+		width:150%;
+		min-height: 550px;
+	}
+
+	.carousel-caption {
+	  height: 450px;
+	} 
+}
+/* -------------------------------------------------- */
 
 /* 
   used for:
