--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -10,7 +10,7 @@
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner">
 	    <div class="item active"> 
-	      <img src="/images/money.jpg" alt="altmoney POPOPOPOPOPOPOPO">
+	      <img src="/images/money.jpg" alt="altmoney">
 	      <div class="carousel-caption">
 	      	<h1>Accessible à tous</h1>
 	        <p>Le PERP 163 permet de se constituer une épargne retraite dans un cadre fiscal exceptionnel</p>
